--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -21,3 +21,14 @@ $spacings: (
   9: 64rem,
   10: 128rem,
 );
+
+$radius: (
+  none: 0,
+  sm: 0.125rem,
+  md: 0.25rem,
+  lg: 0.5rem,
+  xl: 0.75rem,
+  2xl: 1rem,
+  3xl: 1.5rem,
+  full: 9999px,
+);
