--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,6 @@
 @use "sass:math";
 @import "config";
+@import "mixins";
 @import "spacing";
 @import "grid";
 @import "colors";
@@ -121,8 +122,8 @@ a:visited {
 
 .collapse-target {
   overflow: hidden;
-  transition: max-height 0.25s linear;
-  max-height: 200px;
+  transition: all 0.25s linear;
+  max-height: 20vh;
 }
 
 .collapsed {
@@ -160,8 +161,17 @@ a:visited {
     .dark\:text-light,
     .p-3,
     .rounded-lg;
-  transition: box-shadow 0.125s ease-in-out;
-  &:hover {
-    // @extend .shadow;
+}
+
+.container {
+  margin: 0 auto;
+  @each $breakpoint, $value in $breaking-points {
+    @include media-breakpoint-up($value) {
+      max-width: $value;
+    }
   }
+}
+
+.border {
+  border: 1px solid slategray;
 }
