modal select full-screen

--- a/src/sass/_aniimations.scss
+++ b/src/sass/_aniimations.scss
@@ -1,15 +1,6 @@
 %ralative {
   position: relative;
 }
-
-.slide-up {
-  animation: slide-up 0.5s ease-in-out;
-}
-
-.slide-right {
-  animation: slide-right 0.5s ease-in-out;
-}
-
 @keyframes slide-up {
   from {
     margin-top: 0.5rem;
@@ -26,4 +17,59 @@
   to {
     transform: translateX(0);
   }
+}
+
+@keyframes slide-up-large {
+  from {
+    margin-top: 5rem;
+  }
+  to {
+    margin-top: inherit;
+    transform: scale(1);
+  }
+}
+@keyframes shake {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(-2deg);
+  }
+  50% {
+    transform: rotate(2deg);
+  }
+  75% {
+    transform: rotate(-2deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(45deg);
+  }
+}
+
+.slide-up {
+  animation: slide-up 0.5s ease;
+}
+.slide-up-large {
+  animation: slide-up-large 0.5s ease;
+}
+
+.slide-right {
+  animation: slide-right 0.5s ease;
+}
+
+.shake {
+  animation: shake 0.5s ease;
+}
+
+.rotate {
+  animation: rotate 0.5s ease;
 }
