--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -11,6 +11,12 @@
 .justify-between {
   justify-content: space-between;
 }
+.justify-around {
+  justify-content: space-around;
+}
+.justify-evenly {
+  justify-content: space-evenly;
+}
 
 .border {
   border: 1px solid slategray;
